--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,14 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>BSPQ-03_server</name>
 	<url>http://maven.apache.org</url>
-	
+	<properties>
+		<maven.compiler.release>8</maven.compiler.release>
+		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>2.35</jersey.version>
+		<server.hostname>127.0.0.1</server.hostname>
+		<server.port>8080</server.port>
+	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -20,7 +27,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
 	<dependencies>
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -81,7 +87,6 @@
 			<version>8.0.29</version>
 		</dependency>
 	</dependencies>
-	
 	<build>
 		<resources>
 			<resource>
@@ -93,7 +98,6 @@
 				</includes>
 			</resource>
 		</resources>
-
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -110,18 +114,15 @@
 					</filesets>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 			</plugin>
-
 			<plugin>
 				<groupId>org.datanucleus</groupId>
 				<artifactId>datanucleus-maven-plugin</artifactId>
@@ -131,7 +132,6 @@
 					<verbose>true</verbose>
 					<props>${config.files.dir}/datanucleus.properties</props>
 				</configuration>
-				
 				<executions>
 					<execution>
 						<!-- links the enhance to the compile phase -->
@@ -141,19 +141,16 @@
 						</goals>
 					</execution>
 				</executions>
-				
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.4.46.v20220331</version>
-            </plugin>
-
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.2.1</version>
-
 				<configuration>
 					<mainClass>org.datanucleus.samples.jdo.tutorial.Main</mainClass>
 				</configuration>
@@ -177,38 +174,28 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	<properties>
-		<jersey.version>2.35</jersey.version>
-		<maven.compiler.release>8</maven.compiler.release>
-		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>8</maven.compiler.release>
-	</properties>
-	
 	<profiles>
 		<profile>
 			<id>client</id>
 			<build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.2.1</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>java</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <mainClass>com.deustotickets.app.App</mainClass>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>java</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<mainClass>com.deustotickets.app.App</mainClass>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
-	
 </project>
