--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<server.hostname>127.0.0.1</server.hostname>
 		<server.port>8080</server.port>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -94,11 +94,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>com.github.noconnor</groupId>
-            <artifactId>junitperf</artifactId>
-            <version>1.25.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.databene</groupId>
+			<artifactId>contiperf</artifactId>
+			<version>2.3.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
@@ -180,6 +180,8 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.8</version>
+				<configuration>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -228,20 +230,6 @@
 					<configurationFile>${doxygen.config.file}</configurationFile>
 				</configuration>
 			</plugin>
-			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
 		</plugins>
 	</build>
 	<reporting>
